--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
     <!-- the footer -->
     <footer>
 <!--         <img src="img/avatar.jpeg" alt="Footer Logo">
- -->        <span>My Website<br>Copyright &copy; 2016-3010 </span>
+ -->        <span>My Website<br>Copyright &copy; 2019 </span>
     </footer>
 
 </body>
