--- a/index.html
+++ b/index.html
@@ -54,20 +54,20 @@
 
             <div class="feature-box">
                 <img src="img/like.png" alt="Easy to Use">
-                <h5>Easy to Use</h5>
-                <p>Just think of how easy this is to use. Toddlers can do it. So can you!</p>
+                <h5>Easy to Buy</h5>
+                <p>Just place your Order with us and you will make us the number choice in your menu!</p>
             </div>
 
             <div class="feature-box">
                 <img src="img/faces.png" alt="Fun to Use">
-                <h5>Fun to Use</h5>
-                <p>Just think of how easy this is to use. Toddlers can do it. So can you!</p>
+                <h5>Affordable Prices</h5>
+                <p>We have the most affordable poultry birds prices in Town and Our place is hygienic!</p>
             </div>
 
             <div class="feature-box">
                 <img src="img/heart.png" alt="Fun to Use">
-                <h5>You'll Love It</h5>
-                <p>Just think of how easy this is to use. Toddlers can do it. So can you!</p>
+                <h5>Very fast delivery</h5>
+                <p>Our delivery system is superfast and very close to your location,We can deliver within 30min from order time!</p>
             </div>
 
         </div>
